--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   --color-secondary: rgb(114, 129, 151);
   --color-tertiary: rgb(246, 248, 251);
   --color-white: rgb(255,255,255);
-  --color-brand: rgb(170, 255, 0);
+  --color-brand: rgb(132, 255, 0);
 
   --fs-display-l: 76px;
   --fs-display-s: 50px;
@@ -83,12 +83,42 @@ body{
 .navbar{
   width:100%;
   display: flex;
-  justify-content: flex-end;
-  padding: 24px 0px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 0px;
   gap: 32px;
   font-size: var(--fs-body-s);
   position: sticky;
   top:0;
+  background-color: var(--color-tertiary);
+}
+
+
+
+.logo-wrapper{
+  justify-content: space-between;
+  align-items: center;
+  width:auto;
+  display: flex;
+  gap: 8px;
+  font-size: var(--fs-body-s);
+}
+
+.logo-wrapper > p > b{
+  color:var(--color-primary);
+}
+
+.logo{
+  height:45px;
+  width:auto
+}
+
+.navbar-item-wrapper{
+  width:auto;
+  display: flex;
+  justify-content: flex-end;
+  gap: 32px;
+  font-size: var(--fs-body-s);
 }
 
 .nav-item{
@@ -102,7 +132,7 @@ body{
   transition: 0.3s;
 }
 
-.nav-item.selected{
+a.nav-item:active{
   color: var(--color-primary);
   border-bottom: 2px solid var(--color-primary);
 }
@@ -175,6 +205,8 @@ body{
  border-radius: 24px;
  overflow: hidden;
  align-items: stretch;
+ text-decoration:none
+
 }
 
 .work-item:nth-child(even){
@@ -323,8 +355,16 @@ body{
     justify-content:flex-start;
     padding-bottom: 80px;
     padding-top: 40px;
-    align-items: flex-end;
-    gap: 80px;
+    align-items: center;
+    gap: 0px;
+  }
+
+  .logo{
+    height:32px;
+  }
+
+  .logo-name{
+    display:none
   }
 
   .hero-text{
